array.island.Island.scala.error
Compilation error:
Island:12: error: not found: value mun
      max = mun(i);
            ^Island:16: error: not found: value ofDim
  var levels = ofDim[Boolean](max-min+1);
               ^